fixed tr_title overflow: hidden;

--- a/public/client.css
+++ b/public/client.css
@@ -158,6 +158,7 @@ td.button_td {
 
 .tr_title {
   overflow: scroll;
+  overflow: hidden;
 }
 
 .addButtonImages {
